# Comparison

./: .gitignore  main.py  pyproject.toml
MCMC_Evidence/: Cobaya_wrapper.py
